macros/tests/ui/entry_twice.stderr
error[E0428]: the name `main` is defined multiple times
  --> tests/ui/entry_twice.rs:10:1
   |
5  | #[entry]
   | -------- previous definition of the value `main` here
...
10 | #[entry]
   | ^^^^^^^^ `main` redefined here
   |
   = note: `main` must be defined only once in the value namespace of this module
   = note: this error originates in the attribute macro `entry` (in Nightly builds, run with -Z macro-backtrace for more info)
